tests/e2e/semantics/list_assign_bool.error
Error: syntax error in story at line 2, column 1

2|    a = true
      ^^^^^^^^

E0100: Can't assign `boolean` to `List[int]`
